--- a/renderer.html
+++ b/renderer.html
@@ -42,6 +42,7 @@
   <body>
     <div id="TopBar"></div>
     <div id="Sidebar">
+      <a href="file://test_page.html">Test Page</a><br>
       <a href="https://news.ycombinator.com">Hacker News</a><br>
       <a href="https://www.google.com">Google</a>
     </div>
