Center test page content

--- a/test_page.html
+++ b/test_page.html
@@ -12,10 +12,10 @@
     #Content {
       width: 800px;
       height: 400px;
-      /* position: fixed; */
-      /* top: 50%; */
-      /* left: 50%; */
-      /* transform: translate(-50%, -50%); */
+      position: fixed;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
       background: blueviolet;
     }
   </style>
